<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <include
        android:id="@+id/app_bar"
        layout="@layout/tool_bar" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:layout_below="@+id/app_bar"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/etMoney"
        android:selectAllOnFocus="true"
        android:layout_toRightOf="@+id/textView6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/textView6"
        android:layout_below="@+id/etName"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="-10dp"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/date_otdachi"
        android:id="@+id/textView2"
        android:layout_below="@+id/tvToday"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contact"
        android:id="@+id/textView3"
        android:layout_below="@+id/app_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/etName"
        android:layout_toLeftOf="@+id/etMoney"
        android:layout_toStartOf="@+id/etMoney"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/date_today"
        android:id="@+id/textView5"
        android:layout_marginTop="95dp"
        android:layout_below="@+id/etMoney"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dolg"
        android:id="@+id/textView6"
        android:layout_below="@+id/etName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tvToday"
        android:text="@string/date"
        android:linksClickable="false"
        android:clickable="true"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignRight="@+id/etMoney"
        android:layout_alignEnd="@+id/etMoney"
        android:layout_marginRight="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tvAfter"
        android:text="@string/date"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignLeft="@+id/tvToday"
        android:layout_alignStart="@+id/tvToday" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:id="@+id/rgOwe"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView3"
        android:focusable="true"
        android:layout_marginTop="25dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Me"
            android:id="@+id/rbToMe"
            android:layout_weight="0.56"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ToMe"
            android:id="@+id/rbMe"
            android:layout_weight="0.24"
            android:checked="true" />
    </RadioGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rgCurrancy"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:layout_below="@+id/etMoney"
        android:layout_marginTop="25dp"
        android:focusable="true"
        android:layout_above="@+id/tvToday"
        android:layout_marginBottom="15dp">

        <RadioButton
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/BYR"
            android:id="@+id/rbBYR"
            android:checked="true" />

        <RadioButton
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:text="@string/USD"
            android:id="@+id/rbUSD"
            android:checked="false" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EUR"
            android:id="@+id/rbEUR"
            android:checked="false" />
    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etPrim"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:hint="@string/prim" />

    <ListView

        android:id="@+id/list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_below="@+id/textView3"
        android:background="#a7b6b7"
        android:layout_alignParentBottom="true" />


</RelativeLayout>
